# wiki-cli

./: .gitignore  AGENTS.md  README.md  extractor.py  graph.py  init.py  linter.py  pyproject.toml  requirements.txt  rewriter.py  tests.py
.github/workflows/: ci.yml
datasets-wiki/: index.md
datasets-wiki/employee_onboarding/: index.md
datasets-wiki/employee_onboarding/documents/: benefits_guide.md  code_of_conduct.md  employee_handbook.md  hr_policies.md  index.md  it_onboarding_sop.md  laptop_request_process.md  manager_responsibilities.md  vpn_setup_guide.md
datasets-wiki/hr_knowledge_portal/documents/: hr_001_hr_policies.md  hr_002_employee_handbook.md  hr_003_insurance_policy.md  hr_004_social_insurance_guidelines.md  hr_005_annual_leave_policy.md  hr_006_compensation_benefits_policy.md  hr_007_faq_documents.md  (+1 more)
datasets/employee_onboarding/: .gitignore
docs/: implementation-plan.md  spec.md  usage.md
raw_notes-wiki/: attention_mechanism.md  backpropagation.md  batch_normalization.md  beam_search.md  cross_entropy_loss.md  dropout.md  embedding_layer.md  fine_tuning.md  gradient_descent.md  greedy_decoding.md  index.md  kv_cache.md  layer_normalization.md  learning_rate_schedule.md  positional_encoding.md  residual_connection.md  self_attention.md  temperature_scaling.md  tokenization.md  top_k_sampling.md  transformer_block.md
src/: __init__.py  __main__.py  benchmark.py  compiler.py  converter.py  exceptions.py  extractor.py  generator.py  graph.py  init.py  linter.py  plugin.py  relationship.py  rewriter.py  source.py  store.py  tests.py  watcher.py
(+20 files in other folders)
